--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="ga" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Cnuasach Theileann</title>
-  </head>
-  <body>
+---
+layout: default
+---
 <h1>Cnuasach Theileann</h1>
-  </body>
-</html>
+<p>Ábhar foclóra</p>
