--- a/neach.html
+++ b/neach.html
@@ -16,7 +16,7 @@ layout: liosta
     {% for focal in site.focail %}
 <h4>{{focal.leagan}}</h4>
 <h5>{{focal.rann}}</h5>
-<h5><a href="{{site.baseurl}}{{focal.url}}" >{{focal.leagan}}</a></h5>
+<h5><a href="{{focal.url}}" >{{focal.leagan}}</a></h5>
 <strong>Béarla: </strong>
 {{focal.bearla}}
      <p>{{ focal.content | markdownify }}</p>
