--- a/para.html
+++ b/para.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="ga" dir="ltr">
-<head>
-<meta charset="utf-8">
-<script src="js/para.js"></script>
-</head>
-<body>
-
+---
+layout: default
+---
 <h2>Eolas</h2>
 
 <p hidden>
@@ -28,5 +23,3 @@ na mná.
 <h3>An Scéal</h3>
 <hr>
 <p id = 'demo'></p>
-</body>
-</html>
