--- a/para.html
+++ b/para.html
@@ -1,5 +1,5 @@
 <h2>Eolas</h2>
-
+<script src="js/para.js"></script>
 <p hidden>
 Seo eolas a bheas ar fáil anseo
 agus nach mbeidh in áit ar bith eile.
