--- a/para.html
+++ b/para.html
@@ -1,22 +1,28 @@
 ---
 layout: default
+title: An Leabhar
 ---
 <h2>Eolas</h2>
 <script src="js/para.js"></script>
-<p hidden>
+<div hidden>
+<p >
 Seo eolas a bheas ar fáil anseo
 agus nach mbeidh in áit ar bith eile.
 </p>
-<p hidden>
+</div>
+<div hidden>
+<p>
 Is maith an rud muga tae a ól
 thall is abhus de réir mar a
 bhíonn tart ort.</p>
-<p  hidden>
+</div>
+<div hidden>
+<p>
 Banana man a bhí ann agus
 sin an rud a chuir eagla ar
 na mná.
 </p>
-
+</div>
 <button onclick="myFunction(0)">Eolas faoin taobh</button><br>
 <button onclick="myFunction(1)">Eolas faoin tae</button><br>
 <button onclick="myFunction(2)">Eolas faoin Banana Man</button><br>
