--- a/para.html
+++ b/para.html
@@ -5,9 +5,17 @@ title: An Leabhar
 <h2>Eolas</h2>
 <script src="js/para.js"></script>
 <div hidden>
-<p >
-Seo eolas a bheas ar fáil anseo
-agus nach mbeidh in áit ar bith eile.
+	<h4>Deascán Foclóireachta 8</h4>
+	<h4>Eagarthóir Ginearálta: Tomás De Bhaldraithe</h4>
+	<hr>
+	<h2>CNUASACH FOCAL</h2>
+	<h2>AS</h2>
+	<h2>TEILEANN</h2>
+	<h3>ÚNA M. UÍ BHEIRN</h3>
+	<hr>
+	<h3>ACADAMH RÍOGA NA hÉIREANN</h3>
+	<h3>BAILE ÁTHA CLIATH</h3>
+	<h3>1989</h3>
 </p>
 </div>
 <div hidden>
@@ -17,14 +25,23 @@ thall is abhus de réir mar a
 bhíonn tart ort.</p>
 </div>
 <div hidden>
-<p>
-Banana man a bhí ann agus
-sin an rud a chuir eagla ar
-na mná.
+<p> Acadamh Ríoga na hÉireann </p>
+<p> Is mian leis an Acadamh buíochas a ghabháil le Bord na Gaeilge
+,le hÚdarás na Gaeltachta, agus leis an Chanónach Liam Mac an tSagairt, as
+cabhrú le foilsiú an leabhair seo.
 </p>
+<p>ISBN 0 901714 80 1</p>
+<br>
+<p>Sa tsraith chéanna: </p>
+<p>Innéacs Nua-Ghaeilge don 'Dictionary of the Irish Language', Tomás De Bhaldraithe</p>
+<p>Liosta Focal as 'Idir Shúgradh agus Dáiríre', Séamas Ó Murchú</p>
+<p>Díolaim Focal (A) ó Chorca Dhuibhne, Éamonn Ó hÓgáin</p>
+<p>Cnuasach Focal as Ros Goill, Leasluí Ú. Lúcás</p>
+<p>Cnuasach Focal as Uíbh Ráthach, Caoilfhionn Nic Pháidín</p>
+<p>Díolaim Dhéiseach, Diarmaid Ó hÁirt</p>
 </div>
-<button onclick="myFunction(0)">Eolas faoin taobh</button><br>
-<button onclick="myFunction(1)">Eolas faoin tae</button><br>
+<button onclick="myFunction(0)">An Leabhar</button><br>
+<button onclick="myFunction(1)">Eolas Foilsithe</button><br>
 <button onclick="myFunction(2)">Eolas faoin Banana Man</button><br>
 <h3>An Scéal</h3>
 <hr>
