--- a/para.html
+++ b/para.html
@@ -19,26 +19,20 @@ title: An Leabhar
 </p>
 </div>
 <div hidden>
-<p>
-Is maith an rud muga tae a ól
-thall is abhus de réir mar a
-bhíonn tart ort.</p>
-</div>
-<div hidden>
-<p> Acadamh Ríoga na hÉireann </p>
-<p> Is mian leis an Acadamh buíochas a ghabháil le Bord na Gaeilge
+<strong> Acadamh Ríoga na hÉireann </strong>
+<strong> Is mian leis an Acadamh buíochas a ghabháil le Bord na Gaeilge
 ,le hÚdarás na Gaeltachta, agus leis an Chanónach Liam Mac an tSagairt, as
 cabhrú le foilsiú an leabhair seo.
-</p>
-<p>ISBN 0 901714 80 1</p>
+</strong>
+<strong>ISBN 0 901714 80 1</strong>
 <br>
-<p>Sa tsraith chéanna: </p>
-<p>Innéacs Nua-Ghaeilge don 'Dictionary of the Irish Language', Tomás De Bhaldraithe</p>
-<p>Liosta Focal as 'Idir Shúgradh agus Dáiríre', Séamas Ó Murchú</p>
-<p>Díolaim Focal (A) ó Chorca Dhuibhne, Éamonn Ó hÓgáin</p>
-<p>Cnuasach Focal as Ros Goill, Leasluí Ú. Lúcás</p>
-<p>Cnuasach Focal as Uíbh Ráthach, Caoilfhionn Nic Pháidín</p>
-<p>Díolaim Dhéiseach, Diarmaid Ó hÁirt</p>
+<strong>Sa tsraith chéanna: </strong>
+<strong>Innéacs Nua-Ghaeilge don 'Dictionary of the Irish Language', Tomás De Bhaldraithe</strong>
+<strong>Liosta Focal as 'Idir Shúgradh agus Dáiríre', Séamas Ó Murchú</strong>
+<strong>Díolaim Focal (A) ó Chorca Dhuibhne, Éamonn Ó hÓgáin</strong>
+<strong>Cnuasach Focal as Ros Goill, Leasluí Ú. Lúcás</strong>
+<strong>Cnuasach Focal as Uíbh Ráthach, Caoilfhionn Nic Pháidín</strong>
+<strong>Díolaim Dhéiseach, Diarmaid Ó hÁirt</strong>
 </div>
 <button onclick="myFunction(0)">An Leabhar</button><br>
 <button onclick="myFunction(1)">Eolas Foilsithe</button><br>
