--- a/para.html
+++ b/para.html
@@ -19,24 +19,23 @@ title: An Leabhar
 </p>
 </div>
 <div hidden>
-<strong> Acadamh Ríoga na hÉireann </strong>
+	<strong> Acadamh Ríoga na hÉireann </strong><br>
 <strong> Is mian leis an Acadamh buíochas a ghabháil le Bord na Gaeilge
 ,le hÚdarás na Gaeltachta, agus leis an Chanónach Liam Mac an tSagairt, as
-cabhrú le foilsiú an leabhair seo.
-</strong>
-<strong>ISBN 0 901714 80 1</strong>
+cabhrú le foilsiú an leabhair seo. </strong><br>
+<strong>ISBN 0 901714 80 1</strong><br>
 <br>
-<strong>Sa tsraith chéanna: </strong>
-<strong>Innéacs Nua-Ghaeilge don 'Dictionary of the Irish Language', Tomás De Bhaldraithe</strong>
-<strong>Liosta Focal as 'Idir Shúgradh agus Dáiríre', Séamas Ó Murchú</strong>
-<strong>Díolaim Focal (A) ó Chorca Dhuibhne, Éamonn Ó hÓgáin</strong>
-<strong>Cnuasach Focal as Ros Goill, Leasluí Ú. Lúcás</strong>
-<strong>Cnuasach Focal as Uíbh Ráthach, Caoilfhionn Nic Pháidín</strong>
-<strong>Díolaim Dhéiseach, Diarmaid Ó hÁirt</strong>
+<strong>Sa tsraith chéanna: </strong><br>
+<strong>Innéacs Nua-Ghaeilge don 'Dictionary of the Irish Language', Tomás De Bhaldraithe</strong><br>
+<strong>Liosta Focal as 'Idir Shúgradh agus Dáiríre', Séamas Ó Murchú</strong><br>
+<strong>Díolaim Focal (A) ó Chorca Dhuibhne, Éamonn Ó hÓgáin</strong><br>
+<strong>Cnuasach Focal as Ros Goill, Leasluí Ú. Lúcás</strong><br>
+<strong>Cnuasach Focal as Uíbh Ráthach, Caoilfhionn Nic Pháidín</strong><br>
+<strong>Díolaim Dhéiseach, Diarmaid Ó hÁirt</strong><br>
 </div>
 <button onclick="myFunction(0)">An Leabhar</button><br>
 <button onclick="myFunction(1)">Eolas Foilsithe</button><br>
-<button onclick="myFunction(2)">Eolas faoin Banana Man</button><br>
+<button onclick="myFunction(2)">Eolas eile</button><br>
 <h3>An Scéal</h3>
 <hr>
 <p id = 'demo'></p>
