--- a/para.html
+++ b/para.html
@@ -20,18 +20,18 @@ title: An Leabhar
 </div>
 <div hidden>
 	<strong> Acadamh Ríoga na hÉireann </strong><br>
-<strong> Is mian leis an Acadamh buíochas a ghabháil le Bord na Gaeilge
+<p> Is mian leis an Acadamh buíochas a ghabháil le Bord na Gaeilge
 ,le hÚdarás na Gaeltachta, agus leis an Chanónach Liam Mac an tSagairt, as
-cabhrú le foilsiú an leabhair seo. </strong><br>
+cabhrú le foilsiú an leabhair seo. </p><br><br>
 <strong>ISBN 0 901714 80 1</strong><br>
-<br>
+<br><br>
 <strong>Sa tsraith chéanna: </strong><br>
-<strong>Innéacs Nua-Ghaeilge don 'Dictionary of the Irish Language', Tomás De Bhaldraithe</strong><br>
-<strong>Liosta Focal as 'Idir Shúgradh agus Dáiríre', Séamas Ó Murchú</strong><br>
-<strong>Díolaim Focal (A) ó Chorca Dhuibhne, Éamonn Ó hÓgáin</strong><br>
-<strong>Cnuasach Focal as Ros Goill, Leasluí Ú. Lúcás</strong><br>
-<strong>Cnuasach Focal as Uíbh Ráthach, Caoilfhionn Nic Pháidín</strong><br>
-<strong>Díolaim Dhéiseach, Diarmaid Ó hÁirt</strong><br>
+<p>Innéacs Nua-Ghaeilge don 'Dictionary of the Irish Language', Tomás De Bhaldraithe</p><br>
+<p>Liosta Focal as 'Idir Shúgradh agus Dáiríre', Séamas Ó Murchú</p><br>
+<p>Díolaim Focal (A) ó Chorca Dhuibhne, Éamonn Ó hÓgáin</p><br>
+<p>Cnuasach Focal as Ros Goill, Leasluí Ú. Lúcás</p><br>
+<p>Cnuasach Focal as Uíbh Ráthach, Caoilfhionn Nic Pháidín</p><br>
+<p>Díolaim Dhéiseach, Diarmaid Ó hÁirt</p><br>
 </div>
 <button onclick="myFunction(0)">An Leabhar</button><br>
 <button onclick="myFunction(1)">Eolas Foilsithe</button><br>
