--- a/para.html
+++ b/para.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: eolas
 title: An Leabhar
 ---
 <h2>Eolas</h2>
@@ -26,12 +26,12 @@ cabhrú le foilsiú an leabhair seo. </p><br><br>
 <strong>ISBN 0 901714 80 1</strong><br>
 <br><br>
 <strong>Sa tsraith chéanna: </strong><br>
-<p>Innéacs Nua-Ghaeilge don 'Dictionary of the Irish Language', Tomás De Bhaldraithe</p><br>
-<p>Liosta Focal as 'Idir Shúgradh agus Dáiríre', Séamas Ó Murchú</p><br>
-<p>Díolaim Focal (A) ó Chorca Dhuibhne, Éamonn Ó hÓgáin</p><br>
-<p>Cnuasach Focal as Ros Goill, Leasluí Ú. Lúcás</p><br>
-<p>Cnuasach Focal as Uíbh Ráthach, Caoilfhionn Nic Pháidín</p><br>
-<p>Díolaim Dhéiseach, Diarmaid Ó hÁirt</p><br>
+<p>Innéacs Nua-Ghaeilge don 'Dictionary of the Irish Language', Tomás De Bhaldraithe</p>
+<p>Liosta Focal as 'Idir Shúgradh agus Dáiríre', Séamas Ó Murchú</p>
+<p>Díolaim Focal (A) ó Chorca Dhuibhne, Éamonn Ó hÓgáin</p>
+<p>Cnuasach Focal as Ros Goill, Leasluí Ú. Lúcás</p>
+<p>Cnuasach Focal as Uíbh Ráthach, Caoilfhionn Nic Pháidín</p>
+<p>Díolaim Dhéiseach, Diarmaid Ó hÁirt</p>
 </div>
 <button onclick="myFunction(0)">An Leabhar</button><br>
 <button onclick="myFunction(1)">Eolas Foilsithe</button><br>
