--- a/para.html
+++ b/para.html
@@ -8,14 +8,14 @@ title: An Leabhar
 	<h4>Deascán Foclóireachta 8</h4>
 	<h4>Eagarthóir Ginearálta: Tomás De Bhaldraithe</h4>
 	<hr>
-	<h2>CNUASACH FOCAL</h2>
-	<h2>AS</h2>
-	<h2>TEILEANN</h2>
-	<h3>ÚNA M. UÍ BHEIRN</h3>
+	<h3>CNUASACH FOCAL</h3>
+	<h3>AS</h3>
+	<h3>TEILEANN</h3>
+	<h4>ÚNA M. UÍ BHEIRN</h4>
 	<hr>
-	<h3>ACADAMH RÍOGA NA hÉIREANN</h3>
-	<h3>BAILE ÁTHA CLIATH</h3>
-	<h3>1989</h3>
+	<h4>ACADAMH RÍOGA NA hÉIREANN</h4>
+	<h4>BAILE ÁTHA CLIATH</h4>
+	<h4>1989</h4>
 </p>
 </div>
 <div hidden>
@@ -23,7 +23,7 @@ title: An Leabhar
 <p> Is mian leis an Acadamh buíochas a ghabháil le Bord na Gaeilge
 ,le hÚdarás na Gaeltachta, agus leis an Chanónach Liam Mac an tSagairt, as
 cabhrú le foilsiú an leabhair seo. </p><br><br>
-<strong>ISBN 0 901714 80 1</strong><br>
+<p>ISBN 0 901714 80 1</p><br>
 <br><br>
 <strong>Sa tsraith chéanna: </strong><br>
 <p>Innéacs Nua-Ghaeilge don 'Dictionary of the Irish Language', Tomás De Bhaldraithe</p>
