--- a/para.html
+++ b/para.html
@@ -22,9 +22,8 @@ title: An Leabhar
 	<strong> Acadamh Ríoga na hÉireann </strong><br>
 <p> Is mian leis an Acadamh buíochas a ghabháil le Bord na Gaeilge
 ,le hÚdarás na Gaeltachta, agus leis an Chanónach Liam Mac an tSagairt, as
-cabhrú le foilsiú an leabhair seo. </p><br><br>
-<p>ISBN 0 901714 80 1</p><br>
-<br><br>
+cabhrú le foilsiú an leabhair seo. </p><br>
+<p>ISBN 0 901714 80 1</p>
 <strong>Sa tsraith chéanna: </strong><br>
 <p>Innéacs Nua-Ghaeilge don 'Dictionary of the Irish Language', Tomás De Bhaldraithe</p>
 <p>Liosta Focal as 'Idir Shúgradh agus Dáiríre', Séamas Ó Murchú</p>
