--- a/para.html
+++ b/para.html
@@ -2,7 +2,8 @@
 layout: eolas
 title: An Leabhar
 ---
-<h2>Eolas</h2>
+
+<hr>
 <script src="js/para.js"></script>
 <div hidden>
 	<h4>Deascán Foclóireachta 8</h4>
@@ -32,9 +33,20 @@ cabhrú le foilsiú an leabhair seo. </p><br>
 <p>Cnuasach Focal as Uíbh Ráthach, Caoilfhionn Nic Pháidín</p>
 <p>Díolaim Dhéiseach, Diarmaid Ó hÁirt</p>
 </div>
+<div hidden>
+	<h4>Innéacsanna</h4>
+	<ol>
+		<li>Flora</li>	
+		<li>Éisc, beatha agus beithígh mhara</li>	
+		<li>Éin</li>	
+		<li>Feithidí</li>	
+		<li>AGUISÍN</li>	
+	
+	</ol>
+</div>
+
 <button onclick="myFunction(0)">An Leabhar</button><br>
-<button onclick="myFunction(1)">Eolas Foilsithe</button><br>
-<button onclick="myFunction(2)">Eolas eile</button><br>
-<h3>An Scéal</h3>
+<button onclick="myFunction(1)">Foilsiú</button><br>
+<button onclick="myFunction(2)">Innéacsanna</button><br>
 <hr>
 <p id = 'demo'></p>
