--- a/para.html
+++ b/para.html
@@ -25,22 +25,28 @@ title: An Leabhar
 ,le hÚdarás na Gaeltachta, agus leis an Chanónach Liam Mac an tSagairt, as
 cabhrú le foilsiú an leabhair seo. </p><br>
 <p>ISBN 0 901714 80 1</p>
-<strong>Sa tsraith chéanna: </strong><br>
-<p>Innéacs Nua-Ghaeilge don 'Dictionary of the Irish Language', Tomás De Bhaldraithe</p>
-<p>Liosta Focal as 'Idir Shúgradh agus Dáiríre', Séamas Ó Murchú</p>
-<p>Díolaim Focal (A) ó Chorca Dhuibhne, Éamonn Ó hÓgáin</p>
-<p>Cnuasach Focal as Ros Goill, Leasluí Ú. Lúcás</p>
-<p>Cnuasach Focal as Uíbh Ráthach, Caoilfhionn Nic Pháidín</p>
-<p>Díolaim Dhéiseach, Diarmaid Ó hÁirt</p>
+<h5>Sa tsraith chéanna: </h5>
+<ul>
+<li>Innéacs Nua-Ghaeilge don 'Dictionary of the Irish
+	Language', Tomás De Bhaldraithe</li>
+<li>Liosta Focal as 'Idir Shúgradh agus Dáiríre', Séamas Ó
+	Murchú</li>
+<li>Díolaim Focal (A) ó Chorca Dhuibhne, Éamonn Ó hÓgáin</li>
+<li>Cnuasach Focal as Ros Goill, Leasluí Ú. Lúcás</li>
+<li>Cnuasach Focal as Uíbh Ráthach, Caoilfhionn Nic
+	Pháidín</li>
+<li>Díolaim Dhéiseach, Diarmaid Ó hÁirt</li>
+</ul>
 </div>
 <div hidden>
 	<h4>Innéacsanna</h4>
 	<ol>
-		<li>Flora</li>	
-		<li>Éisc, beatha agus beithígh mhara</li>	
-		<li>Éin</li>	
-		<li>Feithidí</li>	
-		<li>AGUISÍN</li>	
+		<li><strong>Flora</strong></li>	
+		<li><strong>Éisc, beatha agus beithígh
+				mhara</strong></li>	
+		<li><strong>Éin</strong></li>	
+		<li><strong>Feithidí</strong></li>	
+		<li><strong>AGUISÍN</strong></li>	
 	
 	</ol>
 </div>
