--- a/neach.html
+++ b/neach.html
@@ -20,7 +20,7 @@ layout: liosta
 <h5><a href="{{focal.url | relative_url}}" ><strong>Nasc</strong>: {{focal.leagan}}</a></h5>
 <strong>Béarla: </strong>
 {{focal.bearla}}
-     <p>{{ focal.content | markdownify }}</p>
+     <p hidden>{{ focal.content | markdownify }}</p>
   <hr>
     {% endfor %}
 
