--- a/para.html
+++ b/para.html
@@ -2,7 +2,7 @@
 layout: eolas
 title: An Leabhar
 ---
-<p><a href="{{site.baseurl}}/npage/page.html" ></a></p>
+<p><a href="{{site.baseurl}}/npage/page.html" >Page</a></p>
 <hr>
 <script src="js/para.js"></script>
 <div hidden>
