--- a/npage/page.html
+++ b/npage/page.html
@@ -9,8 +9,7 @@
 <button onclick="myFunction()">Next document</button>
 
 <script>
-function myFunction() {
-  location.replace("next.html")
+function myFunction() { location = "next.html"
 }
 </script>
 <h1>The First Page</h1>
