--- a/npage/page.html
+++ b/npage/page.html
@@ -7,10 +7,16 @@
 </head>
 <body>
 <button onclick="myFunction()">Next document</button>
-
+<button onclick="goBack()">Go Back</button>
 <script>
 function myFunction() { location = "next.html"
+
 }
+
+function goBack() {
+  window.history.back();
+}
+
 </script>
 <h1>The First Page</h1>
 </body>
