--- a/npage/next.html
+++ b/npage/next.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 <html lang="ga" dir="ltr">
 <meta charset="utf-8">
+<link rel="stylesheet" href="style1.css">
 </head>
 <body>
-<button onclick="myFunction()">Next document</button>
-<button onclick="goBack()">Go Back</button>
-
-<script>
-
-function myFunction() {
-  location="2next.html"
-}
-
-function goBack() {
-  window.history.back();
-}
-
-</script>
-
+<p><img src="img/rustic.jpg"><p>
+<script src="page.js"></script>
+<button onclick="myFunction(2)">Ar Aghaidh</button>
+<button onclick="goBack()">Siar</button>
 <h1>The Second Page</h1>
 </body>
 </html>
