--- a/npage/2next.html
+++ b/npage/2next.html
@@ -4,23 +4,13 @@
 <head>
 <html lang="ga" dir="ltr">
 <meta charset="utf-8">
+<link rel="stylesheet" href="style1.css">
 </head>
 <body>
-<button onclick="myFunction()">Next document</button>
-<button onclick="goBack()">Go Back</button>
-
-<script>
-
-function myFunction() {
-  location="3next.html"
-}
-
-function goBack() {
-  window.history.back();
-}
-
-</script>
-
+<p><img src="img/rustic.jpg"><p>
+<script src="page.js"></script>
+<button onclick="myFunction(3)">Ar Aghaidh</button>
+<button onclick="goBack()">Siar</button>
 <h1>The Third Page</h1>
 </body>
 </html>
