--- a/npage/page.html
+++ b/npage/page.html
@@ -12,21 +12,30 @@
 <button onclick="myFunction(1)">Ar Aghaidh</button>
 <button onclick="goBack()">Siar</button><hr>
 <h1>Seanchaint Theileann - blúiríní</h1>
+<div>
+  <p>
+    I. Gurab é saoghal 'ach subhailce aghaibh é!</p>
 <p>
-I. Gurab é saoghal 'ach subhailce aghaibh é!
-Abairt ócáide í seo.  Nuair a chastar lánamhain óg
+  Abairt ócáide í seo.  Nuair a chastar lánamhain óg
 indiaidh a bpósta ar na seandaoine i dTeilionn seo thuas
-an dóigh a maireann siad an saoghal úr daobhtha.
-Nóta: - Tá dóigh eile a mairtear an saoghal úr do
-lánamhain fosta -
-Go mairidh sibh an saoghal úr!
-Freagar:-
-  Go mairidh tú do shláinte!</p>
+  an dóigh a maireann siad an saoghal úr daobhtha.</p>
 <p>
+  Nóta: - Tá dóigh eile a mairtear an saoghal úr do
+lánamhain fosta -</p>
+  <p>
+    Go mairidh sibh an saoghal úr!</p>
+  <p>
+Freagar:-
+    Go mairidh tú do shláinte!</p>
+  
+  </div>
+<p>
+  <p>
 2. Cuireadh fáilte an t-saighdiúra roimhis.
 .i. Duine a gcuirfidhe fáilte roimhis nach dtiocfadh ó'n
-chroidhe.  Is minic a tharluigheas seo.  Béidh duine
-astoigh i dteach agus tchídhfear duine a teacht a mbfeárr
+    chroidhe.  Is minic a tharluigheas seo. </p>
+ <p>   
+    Béidh duine astoigh i dteach agus tchídhfear duine a teacht a mbfeárr
 le bunadh an toighe gan a'n amharc a fheiceáil air-
 Cuirfidh siad a seacht mallacht air, bfhéidir, ach annsin
 nuair a thiocfas an duine sin 'un toighe béidh siad uilig
