--- a/npage/page.html
+++ b/npage/page.html
@@ -36,15 +36,19 @@ Freagar:-
     chroidhe.  Is minic a tharluigheas seo. </p>
  <p>   
     Béidh duine astoigh i dteach agus tchídhfear duine a teacht a mbfeárr
-le bunadh an toighe gan a'n amharc a fheiceáil air-
+   le bunadh an toighe gan a'n amharc a fheiceáil air-</p>
+  <p>
 Cuirfidh siad a seacht mallacht air, bfhéidir, ach annsin
 nuair a thiocfas an duine sin 'un toighe béidh siad uilig
 'na rith a breith greim láimhe air - sin í an fháilte a
   dtugtar fáilte an t-saighdiúra uirthe i dTeilionn.</p>
 <p>
-3. Dia cadarainn agus an boc dubh!
-.i. Dia eadar sinn fhéin agus an diabhal.  Go sábhailidh
-Dia sinn ar an diabhal.
+  3. Dia cadarainn agus an boc dubh!</p>
+  <p>
+    .i. Dia eadar sinn fhéin agus an diabhal. </p>
+  <p>
+    Go sábhailidh Dia sinn ar an diabhal.</p>
+  <p>
 Baintear féidhim as an abairt seo nuair a bíthear a
   trácht ar an diabhal.</p>
 </body>
