--- a/npage/next.html
+++ b/npage/next.html
@@ -10,6 +10,65 @@
 <script src="page.js"></script>
 <button onclick="myFunction(2)">Ar Aghaidh</button>
 <button onclick="goBack()">Siar</button>
-<h1>The Second Page</h1>
+<h1>L 2</h1>
+<div>
+  <p>
+    4. Tá sibh a tabhairt an chatha, slán a bhéas sibh!</p>
+<p>
+Abairt ócáide a mbaintear féidhim aistí nuair a thig
+duine isteach 'un .toighe agus daoine ag ithe; tá sibh
+  ag ithe, slán a bhéas sibh!<p>
+  </div>
+<div>
+  <p>
+    5. B'fhéidir go mbéarfadh an dall ar an ghearr-fhiadh.</p>
+<p>
+.i. B'fhéidir go dtarlochadh rud ínteacht éagsamhailteach.
+Bhainfidhe féidhim as an abairt seo, cuir i gcás nuair
+a déarfadh duine go rabhthar a smaoitiú ar a dhul 'na
+  gealaighe.</p>
+  
+  </div>
+<div>
+  <p>
+    6. Tuilleadh teannaidh agus bárr dócmhail ort!</p>
+<p>
+.i. Dá olcas mar tá tú go rabh tú seacht n-uaire níos
+  measa.</p>
+  
+  </div>
+<div>
+  <p>
+    7. Nár ba slán comórtas!</p>
+<p>
+.i. Rud nach ceart a chur i gcomórtas le rud ínteacht
+atá níos feárr ná é - fear gan mhaith a rachadh i n-áit
+  fir a mbéadh fios a ghroithe aige.</p>
+  </div>
+<div>
+  <p>
+    8. Slán ach samhailt, ach a shamhailt i gcloich.</p>
+<p>
+.i. Rud adeirtear nuair a bíthear a teisbeaint na h-áite
+  a bhfuil coilm nó aillse nó a leithéid sin ar dhuine.</p>
+  <p>
+    - God bless the mark -</p>
+  </div>
+<div>
+  <p>
+9 Slán a bhí mé nuair a chonnaic mé thú, agus gur ba slán
+    a bhéas mé nuair a imtheochas tú!</p>
+  <p>
+
+Sean-chainnt, agus an rud adeir bunadh Theilinn nuair
+    a tchídh siad an ghealach úr an chéad uair. </p>
+  </div>
+  
+  
+  
+  
+  
+  
+  
 </body>
 </html>
