--- a/npage/2next.html
+++ b/npage/2next.html
@@ -11,6 +11,67 @@
 <script src="page.js"></script>
 <button onclick="myFunction(3)">Ar Aghaidh</button>
 <button onclick="goBack()">Siar</button>
-<h1>The Third Page</h1>
+<h1>L 3</h1>
+  <div>
+    <p>
+  10 Imtheacht an t-srotha leat!<p>
+<p>
+.i. Imtheacht gan philleadh chughat.
+Nuair a imthigheas sruth an lán-mara amach ní
+  philleann sé níos mó.</p>
+  
+  </div>
+<div>
+  <p>
+    11. Briseadh na gcos chughat!</p>
+<p>
+.i. Go mbrisidh tú do chosa.
+Rud adeirtear i n-amannaí nuair a tchídhtear duine a
+  tarraingt ar theach agus gan mórán fáilte roimhis.</p>
+  </div>
+<div>
+  <p>
+    12. An dá thuras ort!</p>
+<p>
+.i. Rud adeirtear, ach ní go feargach sin, le duine nó
+le h-ainmhidhe nó le rud ar bith eile, a chuirfeas mío-
+  shásamh ar dhuine.</p>
+  </div>
+<div>
+  <p>
+    13. Bruith chasta ort!</p>
+<p>
+  Eascaoine - Go dtigidh teine ort.</p>
+<p>
+Nóta: - Is dóiche liom gur bruith a bhainfeas casadh
+  asat atá i gceist.</p>
+  <div>
+<div>
+  <p>
+    14. Dan-th'fhiafruigh ort!</p>
+<p>
+  Freagar ghiorraisc a thugtar ar dhuine fheasach.</p>
+<p>
+  Nóta: - Tá déan th'fhiafruigh ort i dTeilionn fosta.</p>
+  
+  </div>
+<div>
+  <p>
+    15. Labhras easball tá mé casta!</p>
+<p>
+  .i. Tá mé dóighte.</p>
+<p>
+Nóta: - Seo an rud adeireadh seanbhean a bhí i
+  gCruachlann nuair a dhóightidhe a lámh.</p>
+<p>
+Ó scríobh mé (15) fuair mé amach ó shaghart gur cuireadh
+Naomh Labhras 'un báis ar ghrideall.  Is dóiche gur
+  b'é sin an t-ughdar atá leis an t-sean-chainnt.</p>
+    </div>
+  
+  
+  
+  
+  
 </body>
 </html>
