--- a/npage/3next.html
+++ b/npage/3next.html
@@ -11,6 +11,66 @@
 <script src="page.js"></script>
 <button onclick="myFunction(0)">Ar Aghaidh</button>
 <button onclick="goBack()">Siar</button>
-<h1>The Fourth Page</h1>
+<h1>L 4</h1>
+  
+  <div>
+    <p>
+      16. Ba ghráthach an urra! </p>
+ <p>
+.i. Leagan chainnte a mbaintear féidhim aistí i dTeilionn
+nuair a chluintear rud ínteacht nach bhfuil nuaidhe
+   agus nach ndeántar íontas mór de:</p>
+    <p> m.sh. dá bhfeictidhe
+fear a bhéadh ar meisce go minic a tarraingt ar an bhaile; </p>
+     <p>
+dá ndéantaidhe fearthainn a thuar nó a chaileantóracht,
+déarfaidhe: "Ba ghráthach an urra" .i. ní sin scéal
+nuaidhe dó. </p>
+  </div>
+<div>
+   <p>
+17. Feannadh na scine is géire. </p>
+ <p>
+An té a bhéarfas feannadh na scine is géire uaidh béidh
+teanga ghéar aige - bhainfead sé an chairt de'n chrann
+mar adeirtear.  Bíonn eagla roimh an té a bhéarfas
+feannadh na scine is géire uaidh. </p>
+  </div>
+<div>
+   <p>
+18. Beirt nach gcreideann d'éag: Do charaid agus do námhaid. </p>
+ <p>
+An fáth: Tá eagla ar fhear acú go bhfuil tú marbh,
+agus tá eagla ar an fhear eile nach bhfuil. </p>
+  </div>
+<div>
+   <p>
+19. An t-olc agus an maith i dtóin Choilín. </p>
+ <p>
+.i. Rud ar bith dá olcas é a fhágáil ar an té a mbéidh
+an droch-ainm aige roimh ré. </p>
+ <p>
+Tórpa nó scéal ar bith a bhéas ag gabhail bíodh sé
+maith ná olc cuirfear i leith an té atá i gcomhnuidhe
+ag innse an seórt sin scéalta é. </p>
+  </div>
+<div>
+   <p>
+20. Tiocfaidh Earrach gan aon sméar. </p>
+ <p>
+Sin rud adeirtear nuair a bíthear a reic rud ínteacht
+   go craosach;</p>
+  <p> daoine a bhéadh ag caitheamh airgid
+go h-amaideach gan dearcadh ar an am a bhí rompú,
+tiocfaidh am ortha a mbéidh deireadh caithte acú agus
+nach mbíonn pighinn ar bith acú.
+   </p>
+  </div>
+ 
+  
+  
+  
+  
+  
 </body>
 </html>
