--- a/npage/page.html
+++ b/npage/page.html
@@ -7,11 +7,13 @@
 <link rel="stylesheet" href="style1.css">
 </head>
 <body>
+  <nav><a href = {{site.baseurl}/index.html}>Baile</a></nav>
 <p><img src="img/rustic.jpg"><p>
 <script src="page.js"></script>
 <button onclick="myFunction(1)">Ar Aghaidh</button>
 <button onclick="goBack()">Siar</button><hr>
 <h1>Seanchaint Theileann - blúiríní</h1>
+  <h2>L 1</h2>
 <div>
   <p>
     I. Gurab é saoghal 'ach subhailce aghaibh é!</p>
