--- a/npage/page.html
+++ b/npage/page.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-  <nav><a href = {{site.baseurl}/index.html}>Baile</a></nav>
+  <nav><a href ="{{site.baseurl}/index.html}">Baile</a></nav>
 <p><img src="img/rustic.jpg"><p>
 <script src="page.js"></script>
 <button onclick="myFunction(1)">Ar Aghaidh</button>
