--- a/npage/next.html
+++ b/npage/next.html
@@ -6,11 +6,13 @@
 <link rel="stylesheet" href="style1.css">
 </head>
 <body>
+   <nav><a href ="/cnuas-teileann/index.html" style="color:yellow;text-decoration:none;">Baile</a></nav>
 <p><img src="img/rustic.jpg"><p>
 <script src="page.js"></script>
 <button onclick="myFunction(2)">Ar Aghaidh</button>
 <button onclick="goBack()">Siar</button>
-<h1>L 2</h1>
+  <h1>Seanchaint Theileann - Blúiríní</h1>
+<h2>L 2</h2>
 <div>
   <p>
     4. Tá sibh a tabhairt an chatha, slán a bhéas sibh!</p>
