--- a/npage/3next.html
+++ b/npage/3next.html
@@ -7,11 +7,13 @@
 <link rel="stylesheet" href="style1.css">
 </head>
 <body>
+  <nav><a href ="/cnuas-teileann/index.html" style="color:yellow;text-decoration:none;">Baile</a></nav>
 <p><img src="img/rustic.jpg"><p>
 <script src="page.js"></script>
 <button onclick="myFunction(0)">Ar Aghaidh</button>
 <button onclick="goBack()">Siar</button>
-<h1>L 4</h1>
+  <h1>Seanchaint Theileann - blúiríní</h1>
+<h2>L 4</h2>
   
   <div>
     <p>
