--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 layout: default
 ---
 <h3>Cnuasach Focal as Teileann</h3>
+<nav><a href ="/cnuas-teileann/index.html" style="color:yellow;text-decoration:none;">Baile</a></nav>
