--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 layout: default
 ---
 <h3>Cnuasach Focal as Teileann</h3>
-<nav><a href ="/cnuas-teileann/index.html" style="color:yellow;text-decoration:none;">Baile</a></nav>
+<p><a href="{{site.baseurl}}/npage/page.html" ><strong>Samplaí</strong?</a></p>
+	<p>Ábhar scríofa sa chanúint</p>
