--- a/index.html
+++ b/index.html
@@ -2,5 +2,22 @@
 layout: default
 ---
 <h3>Cnuasach Focal as Teileann</h3>
+<p>Is foclóir canúna é Cnuasach Focal as Teileann. Bunaíodh
+an cnuasach ar roinnt foinsí saibhre, idir bhéaloideas, agus
+leabhair léanta faoi chanúint Dheisceart Dhún na nGall.
+Gheofar tuilleadh eolais ar na foinsí idir théacsanna agus
+cainteoirí i réamhrá an údair.</p>
+<h4>Nascleanúint</h4>
+<ul>
+	<li>An Leabhar: eolas faoin leabhar Cnuasach Focal
+		as Teileann</li>
+	<li>Réamhra: réamhra an leabhair</li>
+	<li>Focail 1: liosta naisc do na focail</li>
+	<li>Focail 2: Na focail agus na hiontrálacha dóibh
+		ar fad</li>
+	<li>Foclóir: achoimre do na focail</li>
+	<li>Samplaí: sleachta as na foinsí</li>
+</ul>
+
 <p><a href="{{site.baseurl}}/npage/page.html" ><strong>Samplaí</strong?</a></p>
-	<p>Ábhar scríofa sa chanúint</p>
+	<p>Ábhar ó na foinsí</p>
