--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@ Gheofar tuilleadh eolais ar na foinsí idir théacsanna agus
 cainteoirí i réamhrá an údair.</p>
 <h4>Nascleanúint</h4>
 <ul>
-	<li>An Leabhar: eolas faoin leabhar Cnuasach Focal
+	<li><strong>An Leabhar:</strong> eolas faoin leabhar Cnuasach Focal
 		as Teileann</li>
-	<li>Réamhra: réamhra an leabhair</li>
-	<li>Focail 1: liosta naisc do na focail</li>
-	<li>Focail 2: Na focail agus na hiontrálacha dóibh
+	<li<strong>Réamhra:</strong> réamhra an leabhair</li>
+	<li><strong>Focail 1:</strong> liosta naisc do na focail</li>
+	<li><strong>Focail 2:</strong> Na focail agus na hiontrálacha dóibh
 		ar fad</li>
-	<li>Foclóir: achoimre do na focail</li>
-	<li>Samplaí: sleachta as na foinsí</li>
+	<li><strong>Foclóir:</strong> achoimre do na focail</li>
+	<li><strong>Samplaí:</strong> sleachta as na foinsí</li>
 </ul>
 
 <p><a href="{{site.baseurl}}/npage/page.html" ><strong>Samplaí</strong?</a></p>
