--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ cainteoirí i réamhrá an údair.</p>
 <ul>
 	<li><strong>An Leabhar:</strong> eolas faoin leabhar Cnuasach Focal
 		as Teileann</li>
-	<li<strong>Réamhra:</strong> réamhra an leabhair</li>
+	<li><strong>Réamhra:</strong> réamhra an leabhair</li>
 	<li><strong>Focail 1:</strong> liosta naisc do na focail</li>
 	<li><strong>Focail 2:</strong> Na focail agus na hiontrálacha dóibh
 		ar fad</li>
@@ -19,5 +19,5 @@ cainteoirí i réamhrá an údair.</p>
 	<li><strong>Samplaí:</strong> sleachta as na foinsí</li>
 </ul>
 
-<p><a href="{{site.baseurl}}/npage/page.html" ><strong>Samplaí</strong?</a></p>
-	<p>Ábhar ó na foinsí</p>
+<p><a href="{{site.baseurl}}/npage/page.html"><strong>Samplaí : ábhar ó na foinsí</strong></a>
+</p>
