--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ cainteoirí i réamhrá an údair.</p>
 	<li><strong>An Leabhar:</strong> eolas faoin leabhar Cnuasach Focal
 		as Teileann</li>
 	<li><strong>Réamhra:</strong> réamhra an leabhair</li>
-	<li><strong>Focail 1:</strong> liosta naisc do na focail</li>
+	<li><strong>Focail 1:</strong> liosta nasc do na focail</li>
 	<li><strong>Focail 2:</strong> Na focail agus na hiontrálacha dóibh
 		ar fad</li>
 	<li><strong>Foclóir:</strong> achoimre do na focail</li>
