--- a/para.html
+++ b/para.html
@@ -5,8 +5,7 @@ title: An Leabhar
 <p><a href="{{site.baseurl}}/npage/page.html" ><strong>Samplaí</strong?</a></p>
 	<p>Ábhar scríofa sa chanúint</p>
 <hr>
-<script src="js/para.js"></script>
-<div hidden>
+<div >
 	<h4>Deascán Foclóireachta 8</h4>
 	<h4>Eagarthóir Ginearálta: Tomás De Bhaldraithe</h4>
 	<hr>
@@ -20,7 +19,7 @@ title: An Leabhar
 	<h4>1989</h4>
 </p>
 </div>
-<div hidden>
+<div >
 	<strong> Acadamh Ríoga na hÉireann </strong><br>
 <p> Is mian leis an Acadamh buíochas a ghabháil le Bord na Gaeilge
 ,le hÚdarás na Gaeltachta, agus leis an Chanónach Liam Mac an tSagairt, as
@@ -41,7 +40,7 @@ cabhrú le foilsiú an leabhair seo. </p><br>
 <li><strong>Díolaim Dhéiseach, Diarmaid Ó hÁirt</strong></li>
 </ul>
 </div>
-<div hidden>
+<div >
 	<h4>Innéacsanna</h4>
 	<ol>
 		<li><strong>Flora</strong></li>	
@@ -53,9 +52,5 @@ cabhrú le foilsiú an leabhair seo. </p><br>
 	
 	</ol>
 </div>
-
-<button onclick="myFunction(0)">An Leabhar</button><br>
-<button onclick="myFunction(1)">Foilsiú</button><br>
-<button onclick="myFunction(2)">Innéacsanna</button><br>
 <hr>
 <p id = 'demo'></p>
