--- a/para.html
+++ b/para.html
@@ -1,5 +1,5 @@
 ---
-layout: eolas
+layout: default
 title: An Leabhar
 ---
 <p><a href="{{site.baseurl}}/npage/page.html" ><strong>Samplaí</strong?</a></p>
