--- a/para.html
+++ b/para.html
@@ -2,7 +2,8 @@
 layout: default
 title: An Leabhar
 ---
-<p><a href="{{site.baseurl}}/npage/page.html" ><strong>Samplaí</strong?</a></p>
+<p><a href="{{site.baseurl}}/npage/page.html" ><strong>Samplaí</strong></a></p>
+
 	<p>Ábhar scríofa sa chanúint</p>
 <hr>
 <div >
