--- a/para.html
+++ b/para.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: eolas
 title: An Leabhar
 ---
 <p><a href="{{site.baseurl}}/npage/page.html" ><strong>Samplaí</strong></a></p>
