--- a/para.html
+++ b/para.html
@@ -15,14 +15,16 @@ title: An Leabhar
 	<h3>TEILEANN</h3>
 	<h4>ÚNA M. UÍ BHEIRN</h4>
 	<hr>
-	<h4>ACADAMH RÍOGA NA hÉIREANN</h4>
+kk	<h4>ACADAMH RÍOGA NA hÉIREANN</h4>
 	<h4>BAILE ÁTHA CLIATH</h4>
 	<h4>1989</h4>
 </p>
 <hr>
 </div>
 <div >
-	<strong> Acadamh Ríoga na hÉireann </strong><br>
+
+
+	<strong>© Acadamh Ríoga na hÉireann </strong><br>
 <p> Is mian leis an Acadamh buíochas a ghabháil le Bord na Gaeilge
 ,le hÚdarás na Gaeltachta, agus leis an Chanónach Liam Mac an tSagairt, as
 cabhrú le foilsiú an leabhair seo. </p><br>
