--- a/para.html
+++ b/para.html
@@ -15,7 +15,7 @@ title: An Leabhar
 	<h3>TEILEANN</h3>
 	<h4>ÚNA M. UÍ BHEIRN</h4>
 	<hr>
-kk	<h4>ACADAMH RÍOGA NA hÉIREANN</h4>
+	<h4>ACADAMH RÍOGA NA hÉIREANN</h4>
 	<h4>BAILE ÁTHA CLIATH</h4>
 	<h4>1989</h4>
 </p>
