--- a/para.html
+++ b/para.html
@@ -31,17 +31,17 @@ cabhrú le foilsiú an leabhair seo. </p><br>
 <p>ISBN 0 901714 80 1</p>
 <h4>Sa tsraith chéanna: </h4>
 <ul>
-	<li><strong>Innéacs Nua-Ghaeilge don 'Dictionary of the Irish
-			Language', Tomás De Bhaldraithe</strong></li>
-<li><strong>Liosta Focal as 'Idir Shúgradh agus Dáiríre', Séamas Ó
-    <strong>   Murchú</strong></li>
-<li><strong>Díolaim Focal (A) ó Chorca Dhuibhne, Éamonn Ó
-		hÓgáin</strong><li>
-<li><strong>Cnuasach Focal as Ros Goill, Leasluí Ú.
-		Lúcás</strong></li>
-<li><strong>Cnuasach Focal as Uíbh Ráthach, Caoilfhionn Nic
-		<strong>Pháidín</strong></li>
-<li><strong>Díolaim Dhéiseach, Diarmaid Ó hÁirt</strong></li>
+	<li>Innéacs Nua-Ghaeilge don 'Dictionary of the Irish
+			Language', Tomás De Bhaldraithe</li>
+<li>Liosta Focal as 'Idir Shúgradh agus Dáiríre', Séamas Ó
+       Murchú</li>
+<li>Díolaim Focal (A) ó Chorca Dhuibhne, Éamonn Ó
+		hÓgáin<li>
+<li>Cnuasach Focal as Ros Goill, Leasluí Ú.
+		Lúcás</li>
+<li>Cnuasach Focal as Uíbh Ráthach, Caoilfhionn Nic
+		Pháidín</li>
+<li>Díolaim Dhéiseach, Diarmaid Ó hÁirt</li>
 </ul>
 </div>
 <div >
