--- a/dog.html
+++ b/dog.html
@@ -7,10 +7,9 @@
 <body> 
 <p>
 
-	{% for dog in site.text %}
-{{dog.content }}
-
-	{% endfor %}
+{% for dog in site.text %}
+{{dog }}
+{% endfor %}
 </p>
 	
 </body>
