--- a/dog.html
+++ b/dog.html
@@ -5,12 +5,15 @@
 	<title></title>
 </head>
 <body> 
-<p>
-
+<ul>
 {% for dog in site.text %}
-{{dog.content }}
+<li>
+		
+<p>{{dog.content }}</p>
+	</li>
+	
 {% endfor %}
-</p>
+</ul>
 	
 </body>
 </html>
