--- a/npage/page.html
+++ b/npage/page.html
@@ -1,3 +1,8 @@
+---
+layout:
+
+---
+
 <!DOCTYPE html>
 <html>
 
@@ -7,6 +12,7 @@
 <link rel="stylesheet" href="style1.css">
 </head>
 <body>
+  {% include npages.html %}
   <nav><a href ="/cnuas-teileann/index.html" style="color:yellow;text-decoration:none;">Baile</a></nav>
 <p><img src="img/rustic.jpg"><p>
 <script src="page.js"></script>
@@ -29,14 +35,14 @@ lánamhain fosta -</p>
   <p>
 Freagar:-
     Go mairidh tú do shláinte!</p>
-  
+
   </div>
 <p>
   <p>
 2. Cuireadh fáilte an t-saighdiúra roimhis.
 .i. Duine a gcuirfidhe fáilte roimhis nach dtiocfadh ó'n
     chroidhe.  Is minic a tharluigheas seo. </p>
- <p>   
+ <p>
     Béidh duine astoigh i dteach agus tchídhfear duine a teacht a mbfeárr
    le bunadh an toighe gan a'n amharc a fheiceáil air-</p>
   <p>
