--- a/npage/2next.html
+++ b/npage/2next.html
@@ -1,3 +1,8 @@
+---
+layout:
+
+---
+
 <!DOCTYPE html>
 <html>
 
@@ -7,6 +12,7 @@
 <link rel="stylesheet" href="style1.css">
 </head>
 <body>
+  {% include npages.html %}
    <nav><a href ="/cnuas-teileann/index.html" style="color:yellow;text-decoration:none;">Baile</a></nav>
 <p><img src="img/rustic.jpg"><p>
 <script src="page.js"></script>
@@ -21,7 +27,7 @@
 .i. Imtheacht gan philleadh chughat.
 Nuair a imthigheas sruth an lán-mara amach ní
   philleann sé níos mó.</p>
-  
+
   </div>
 <div>
   <p>
@@ -55,7 +61,7 @@ Nóta: - Is dóiche liom gur bruith a bhainfeas casadh
   Freagar ghiorraisc a thugtar ar dhuine fheasach.</p>
 <p>
   Nóta: - Tá déan th'fhiafruigh ort i dTeilionn fosta.</p>
-  
+
   </div>
 <div>
   <p>
@@ -70,10 +76,10 @@ Nóta: - Seo an rud adeireadh seanbhean a bhí i
 Naomh Labhras 'un báis ar ghrideall.  Is dóiche gur
   b'é sin an t-ughdar atá leis an t-sean-chainnt.</p>
     </div>
-  
-  
-  
-  
-  
+
+
+
+
+
 </body>
 </html>
