--- a/npage/3next.html
+++ b/npage/3next.html
@@ -1,3 +1,8 @@
+---
+layout:
+
+---
+
 <!DOCTYPE html>
 <html>
 
@@ -7,6 +12,8 @@
 <link rel="stylesheet" href="style1.css">
 </head>
 <body>
+  {% include npages.html %}
+
   <nav><a href ="/cnuas-teileann/index.html" style="color:yellow;text-decoration:none;">Baile</a></nav>
 <p><img src="img/rustic.jpg"><p>
 <script src="page.js"></script>
@@ -14,7 +21,7 @@
 <button onclick="goBack()">Siar</button>
   <h1>Seanchaint Theileann - blúiríní</h1>
 <h2>L 4</h2>
-  
+
   <div>
     <p>
       16. Ba ghráthach an urra! </p>
@@ -68,11 +75,11 @@ tiocfaidh am ortha a mbéidh deireadh caithte acú agus
 nach mbíonn pighinn ar bith acú.
    </p>
   </div>
- 
-  
-  
-  
-  
-  
+
+
+
+
+
+
 </body>
 </html>
