--- a/npage/next.html
+++ b/npage/next.html
@@ -1,11 +1,18 @@
+---
+layout:
+
+---
+
 <!DOCTYPE html>
 <html>
+
 <head>
 <html lang="ga" dir="ltr">
 <meta charset="utf-8">
 <link rel="stylesheet" href="style1.css">
 </head>
 <body>
+  {% include npages.html %}
    <nav><a href ="/cnuas-teileann/index.html" style="color:yellow;text-decoration:none;">Baile</a></nav>
 <p><img src="img/rustic.jpg"><p>
 <script src="page.js"></script>
@@ -29,7 +36,7 @@ duine isteach 'un .toighe agus daoine ag ithe; tá sibh
 Bhainfidhe féidhim as an abairt seo, cuir i gcás nuair
 a déarfadh duine go rabhthar a smaoitiú ar a dhul 'na
   gealaighe.</p>
-  
+
   </div>
 <div>
   <p>
@@ -37,7 +44,7 @@ a déarfadh duine go rabhthar a smaoitiú ar a dhul 'na
 <p>
 .i. Dá olcas mar tá tú go rabh tú seacht n-uaire níos
   measa.</p>
-  
+
   </div>
 <div>
   <p>
@@ -65,12 +72,12 @@ atá níos feárr ná é - fear gan mhaith a rachadh i n-áit
 Sean-chainnt, agus an rud adeir bunadh Theilinn nuair
     a tchídh siad an ghealach úr an chéad uair. </p>
   </div>
-  
-  
-  
-  
-  
-  
-  
+
+
+
+
+
+
+
 </body>
 </html>
