--- a/npage/3next.html
+++ b/npage/3next.html
@@ -1,5 +1,5 @@
 ---
-layout:
+layout: npagelayout
 
 ---
 
@@ -14,7 +14,7 @@ layout:
 <body>
   {% include npages.html %}
 
-  <nav><a href ="/cnuas-teileann/index.html" style="color:yellow;text-decoration:none;">Baile</a></nav>
+
 
 <script src="page.js"></script>
 <button onclick="myFunction(0)">Ar Aghaidh</button>
