--- a/npage/page.html
+++ b/npage/page.html
@@ -1,5 +1,5 @@
 ---
-layout:
+layout: npagelayout
 
 ---
 
@@ -13,7 +13,7 @@ layout:
 </head>
 <body>
   {% include npages.html %}
-  <nav><a href ="/cnuas-teileann/index.html" style="color:yellow;text-decoration:none;">Baile</a></nav>
+ 
 <script src="page.js"></script>
 <button onclick="myFunction(1)">Ar Aghaidh</button>
 <button onclick="goBack()">Siar</button><hr>
