--- a/people.html
+++ b/people.html
@@ -8,9 +8,7 @@ layout: default
 {% for item in site.data.people %}
 
 <ul>
-	<li>{{ item.age}}</li>
-	<li><{{ item.name}}</li>
-	<li>{{ item.sex }}</li>
+	<li>{{ item}}</li>
 <hr>
 </ul>
 
