--- a/people.html
+++ b/people.html
@@ -5,7 +5,7 @@ layout: default
 
 <h4>Liosta Focal</h4>
 
-{% for item in site.data.people %}
+{% for item in site.data.people.1 %}
 
 <ul>
 	<li>{{ item.name}}</li>
