--- a/people.html
+++ b/people.html
@@ -4,11 +4,10 @@ layout: default
 <h3>Cnuasach Focal as Teileann</h3>
 
 <h4>Liosta Focal</h4>
-
-{% for item in site.data.people.1 %}
-
 <ul>
-	<li>{{ item.name}}</li>
+{% for item in site.data.daoine %}
+
+<li>{{ item.ainm}}</li>
 <hr>
 </ul>
 
