--- a/people.html
+++ b/people.html
@@ -5,7 +5,7 @@ layout: default
 
 <h4>Liosta Focal</h4>
 <ul>
-{% for item in site.data.daoine %}
+{% for item in site.data.daoine.duine %}
 
 <li>{{ item.ainm}}</li>
 <hr>
