--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@ cainteoirí i réamhrá an údair.</p>
 	<li><strong>An Leabhar:</strong> eolas faoin leabhar Cnuasach Focal
 		as Teileann</li>
 	<li><strong>Réamhra:</strong> réamhra an leabhair</li>
-	<li><strong>Focail 1:</strong> liosta nasc do na focail</li>
-	<li><strong>Focail 2:</strong> Na focail agus na hiontrálacha dóibh
-		ar fad</li>
+	<li><strong>Focail 1:</strong>Focal agus Iontráil </li>
+	<li><strong>Focail 2:</strong>Focail agus nasc </li>
 	<li><strong>Foclóir:</strong> achoimre do na focail</li>
 	<li><strong>Samplaí:</strong> sleachta as na foinsí</li>
 </ul>
