--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <h3>Cnuasach Focal as Teileann</h3>
+<h4>Tástáil</h4>
 <p>Is foclóir canúna é Cnuasach Focal as Teileann. Bunaíodh
 an cnuasach ar roinnt foinsí saibhre, idir bhéaloideas, agus
 leabhair léanta faoi chanúint Dheisceart Dhún na nGall.
